# test-tender-scraper

./: .env  README.md  client.py  main.py  new_tenders.db  pyproject.toml
app/: client.py  config.py  database.py  main.py  parser.py  schemas.py  scraper.py
app/api/: tenders.py
app/commands/: delete_file.py  parse_to_file.py  run_api_server.py  show_data.py
data/: new_tenders.db
